# spriteforge

./: .gitignore  README.md  ROADMAP.md  __init__.py  cli.py  copilot-instructions.md  pyproject.toml
data/: __init__.py  dataset.py  transforms.py
models/: __init__.py  base.py  discriminator.py  encoder_decoder.py  generator.py  text_encoder.py  vae.py
scripts/: prepare_kaggle_dataset.py  preprocess.py
training/: __init__.py  losses.py  trainer.py
utils/: __init__.py
